# Game-cli

./: .gitignore  README.md  pyproject.toml
docs/develop/python-prd/: 00-index.md  01-overview.md  02-architecture.md  03-data-models.md  04-agent-runtime.md  05-template-skill.md  06-debug-skill.md  07-game-skill-orchestrator.md  08-asset-pipeline.md  09-bench.md  10-tools-reference.md  11-configuration.md  12-implementation-plan.md  (+3 more)
docs/user/: api-providers.md  architecture.md  cli-reference.md  configuration.md  getting-started.md  index.md  skills.md
opengame/: __init__.py  __main__.py
opengame/bench/: __init__.py  evaluator.py  types.py
opengame/cli/: __init__.py  config_loader.py  main.py
opengame/config/: __init__.py  constants.py  models.py  storage.py
opengame/core/: __init__.py  agent_context.py  chat_compression_service.py  content_generator.py  exceptions.py  interactive_loop.py  llm_client.py  openai_client.py  prompts.py  token_limit_checker.py  tool_output_summarizer.py  tool_output_truncator.py  tool_registry.py  tool_scheduler.py  turn_loop.py
opengame/prompts/: custom.md  default.md
opengame/services/: __init__.py  asset_audio_service.py  asset_image_service.py  asset_service.py  asset_video_service.py  auto_tiler.py  file_discovery.py  fs_service.py  shell_service.py  tileset_processor.py
opengame/skills/: __init__.py  game_skill.py  game_types.py
opengame/tools/: __init__.py  control_tools.py  factory.py  file_tools.py  game_tools.py  interactive_tools.py  memory_tools.py  shell_tools.py  subagent_tool.py  task_tools.py  web_tools.py
opengame/tracing/: __init__.py  store.py  tracer.py
opengame/utils/: __init__.py  browser_launcher.py  edit_helper.py  errors.py  json_utils.py  retry.py  token_counter.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_pipeline.py
todo/: 2026-05-29.md  2026-05-30.md  2026-05-31.md  2026-06-01.md
traces-export/: session-1.json
(+60 files in other folders)
